# PaperPulse

./: .gitignore  README.md  main.py  pyproject.toml  run.py
crawler/: gh_trending.py  paper.py
example/: 20250818.json  20250818.md
mail/: config_template.json  email_template.html  generate_news_letter.py  sender.py  sender_new.py
summary/: ai.py
utils/: log.py
